Ok small changeds but a few that have made the site look nice on mobile, fixed a small issue with the icon list always popping out with a minor fix from setting a thing from 50% to auto, the follow me section was being a total pain with the words overflowing, simple fix. home page is pretty much done with a few touch ups here

--- a/src/App.scss
+++ b/src/App.scss
@@ -100,6 +100,7 @@ html {
   display: flex;
   flex: wrap;
   width: 100%;
+  height: 80px;
   padding: 0%;
   text-align: left;
   font-size: 1.5rem;
@@ -187,7 +188,21 @@ html {
   font-weight: bold;
   margin: 3%;
   box-shadow: 1px 1px 5px 5px rgb(0, 0, 0);
-  width: 100%;
+  width: auto;
+  background-color: white;
+  // height: 500px;
+  a {
+    &:hover {
+      transform: scale(1.01);
+      opacity: 1000;
+      box-shadow: 1px 1px 1px 1px rgb(1, 0, 3);
+      overflow: hidden;
+    }
+  }
+  p {
+    padding: 1%;
+    box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.068);
+  }
 }
 
 .footer {
@@ -256,7 +271,7 @@ html {
 .imglinks {
   width: 100px;
   height: 50px;
-  margin: 0.5% 1% 0.5% 1.25%;
+  margin: 0.25% 1% 0.5% 1%;
   border: rgb(255, 0, 0);
   border-style: solid;
   border-width: 1px;
@@ -509,21 +524,32 @@ h3 {
 
   .sectiontext {
     font-size: 1rem;
-    width: 100%;
+    width: auto;
   }
+
+  .sectiontextfollow {
+    font-size: 0.9rem;
+    width: auto;
+    a {
+      font-size: 0.65rem;
+    }
+  }
+
   .section {
     display: flex;
     flex-flow: column;
   }
   .sectionhalf {
-    width: 100%;
+    width: auto;
   }
   .icontext {
     font-size: 1rem;
+    height: 80px;
   }
   .imgicons {
     width: 100px;
     height: auto;
+    margin: 10% 0% 5% -2%;
   }
   .footertext {
     font-size: 0.5rem;
